<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1.2"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/turn_left_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:textAllCaps="false"
                    android:tag="0"
                    android:text="@string/left2"/>
                <Button
                    android:id="@+id/turn_right_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:textAllCaps="false"
                    android:tag="1"
                    android:layout_marginLeft="50dp"
                    android:text="@string/right2"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <Button
                    android:id="@+id/reset_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:textAllCaps="false"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:tag="4"
                    android:text="@string/stop"/>
                <Button
                    android:id="@+id/forward_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:layout_above="@id/reset_btn"
                    android:tag="0"
                    android:text="@string/forward"/>
                <Button
                    android:id="@+id/backward_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="false"
                    android:layout_below="@id/reset_btn"
                    android:tag="1"
                    android:text="@string/backward"/>
                <Button
                    android:id="@+id/leftward_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/reset_btn"
                    android:tag="2"
                    android:text="@string/left"/>
                <Button
                    android:id="@+id/rightward_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:textAllCaps="false"
                    android:layout_toRightOf="@id/reset_btn"
                    android:tag="3"
                    android:text="@string/right"/>
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/backgroud"
            >
        </View>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <WebView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>